# ccc

./: .gitignore  ADDING_FEATURES.md  CCC_BEHAVIOR_CONTRACT.md  CCC_PARSER_CONFIG_DESIGN.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  FEATURES.md  IMPLEMENTATION_REFERENCE.md  INDEX_MASTER_SPEC.md  JSON_PARSING_MAP.md  Justfile  MICROPLAN.md  MOCK_CODING_CLI_PLAN.md  README.md  RELEASING.md  ROADMAP_LANGUAGE_SCAFFOLDS.md  SHARED_CHANGES.md  TASKS.md  TEST_HARNESS_PLAN.md  _dispatch_help.sh  _dispatch_parallel.sh  compare_ccc.sh  existing-solns.txt  json-unhandled-output-from-opencode.txt  pyproject.toml  run_all_tests.sh  test_impl.sh
.github/workflows/: release.yml
.goal-loops/: active-goal.md
asm-x86_64/: Makefile  PLAN.md  ccc  ccc-bin  ccc.asm  ccc.sh
asm-x86_64/tests/: test_ccc.sh
c/: Makefile
c/src/: ccc.c  config.c  config.h  json_output.c  json_output.h  parser.c  parser.h  prompt_spec.c  prompt_spec.h  runner.c  runner.h
c/tests/: test_ccc.c  test_json_output.c  test_parser.c  test_prompt_spec.c  test_runner.c
cpp/: CMakeLists.txt  PLAN.md
cpp/include/ccc/: build_prompt.hpp  ccc.hpp  command_spec.hpp  completed_run.hpp  config.hpp  help.hpp  json_output.hpp  parser.hpp  runner.hpp
cpp/src/: build_prompt.cpp  ccc_cli.cpp  config.cpp  help.cpp  json_output.cpp  parser.cpp  runner.cpp
cpp/tests/: CMakeLists.txt  test_ccc_contract.cpp  test_json_output.cpp  test_parser.cpp  test_prompt_spec.cpp  test_runner.cpp
crystal/: CLAUDE.md  PLAN.md  ccc  shard.yml
crystal/spec/: cli_spec.cr  help_spec.cr  json_output_spec.cr  parser_spec.cr  runner_spec.cr
crystal/src/call_coding_clis/: ccc.cr  config.cr  help.cr  json_output.cr  parser.cr  prompt_spec.cr  runner.cr
d/: PLAN.md  call-coding-clis-test-application  ccc  dub.json
d/source/call_coding_clis/: ccc.d  config.d  help.d  json_output.d  parser.d  prompt_spec.d  runner.d
d/tests/: test_json_output.d  test_parser.d  test_runner.d
docs/: index.html  llms.txt
docs/clis/: README.md  allow-deny-tool-plan.md  claude.md  codex.md  crush.md  cursor.md  gemini.md  grok.md  json-event-references.md  kimi.md  mock-smoke.md  model-capabilities.json  opencode.md  output-mode-compatibility.md  output-mode-porting.md  pi.md  roocode.md  stream-output-visual-systems.md  updating-model-capabilities.md
docs/superpowers/plans/: 2026-04-15-ccc-run-artifacts.md  (+1 more)
elixir/: PLAN.md  README.md  ccc  erl_crash.dump  mix.exs
elixir/test/: runner_test.exs
fsharp/: PLAN.md  call-coding-clis.sln
fsharp/tests/: JsonOutputTests.fs  ParserTests.fs  RunnerTests.fs  call-coding-clis-tests.fsproj
go/: PLAN.md  ccc  ccc.go  ccc_test.go  config.go  config_test.go  go.mod  help.go  help_test.go  json_output.go  json_output_test.go  parser.go  parser_test.go
haskell/: PLAN.md  call-coding-clis.cabal  ccc
haskell/app/: Main.hs
haskell/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
haskell/dist-newstyle/packagedb/ghc-9.6.7/: call-coding-clis-0.1.0.0-inplace.conf  package.cache
haskell/src/CallCodingClis/: Config.hs  Help.hs  JsonOutput.hs  Parser.hs  PromptSpec.hs  Runner.hs  Types.hs
haskell/test/: JsonOutputSpec.hs  ParserSpec.hs  Spec.hs
nim/: PLAN.md  call_coding_clis.nimble
nim/call_coding_clis/: ccc
nim/tests/: test_cli.nim  test_config.nim  test_help.nim  test_json_output.nim  test_parser.nim  test_runner.nim
ocaml/: CLAUDE.md  PLAN.md  dune-project
ocaml/_build/: .db  .digest-db  trace.csexp
ocaml/lib/: command_spec.ml  command_spec.mli  config.ml  config.mli  dune  error_format.ml  error_format.mli  help.ml  help.mli  json_output.ml  json_output.mli  parser.ml  parser.mli
ocaml/test/: dune  test_config.ml  test_help.ml  test_json_output.ml  test_parser.ml
perl/: MANIFEST  Makefile.PL  PLAN.md
perl/t/: 01_build_prompt_spec.t  02_runner.t  03_ccc_binary.t  04_parser.t  05_resolve_command.t  06_json_output.t
php/: PLAN.md  composer.json
php/src/: CommandSpec.php  CompletedRun.php  Config.php  Help.php  JsonOutput.php  Parser.php  Runner.php  build_prompt_spec.php
php/tests/: CliTest.php  ConfigTest.php  JsonOutputTest.php  ParserTest.php  RunnerTest.php
purescript/: .gitignore  PLAN.md  package.json  spago.yaml
purescript/src/: Main.js  Main.purs
purescript/test/: Main.purs
python/: README.md
python/call_coding_clis/: __init__.py  artifacts.py  cli.py  config.py  help.py  json_output.py  parser.py  runner.py  update_check.py
reviews/pi-support/: SCOPE.md
ruby/: PLAN.md  Rakefile  call_coding_clis.gemspec
ruby/lib/: call_coding_clis.rb
ruby/test/: test_ccc_cli.rb  test_command_spec.rb  test_completed_run.rb  test_json_output.rb  test_parser.rb  test_prompt_spec.rb  test_runner.rb
rust/: Cargo.toml  README.md  build.rs
rust/src/: artifacts.rs  config.rs  exec.rs  help.rs  json_output.rs  lib.rs  parser.rs  sugar.rs  update_check.rs
rust/src/invoke/: mod.rs  plan.rs  request.rs
rust/src/output/: mod.rs  model.rs  parse.rs  render.rs
rust/tests/: config_tests.rs  help_tests.rs  json_output_tests.rs  library_api_tests.rs  parser_tests.rs  run_artifacts_tests.rs
scripts/: capture-kimi-error-surfaces.sh  capture-runner-transcripts.sh  smoke-output-modes.sh
tests/: rust_runner.rs  test_ccc_contract.py  test_ccc_contract_impl.py  test_harness.py  test_json_output.py  test_parser_config.py  test_run_artifacts.py  test_runner.py  test_update_check.py
tests/fixtures/: config-example.toml  unhandled-claude-json.txt
tests/mock-coding-cli/: mock_coding_cli.sh
typescript/: package.json
typescript/src/: ccc.js  config.js  help.js  index.js  json_output.js  parser.js
typescript/tests/: help.test.mjs  json_output.test.mjs  parser.test.mjs  runner.test.mjs
vbscript/: PLAN.md  build_prompt_spec.vbs  ccc.vbs  runner.vbs
vbscript/src/: config.vbs  parser.vbs
vbscript/tests/: test_runner.vbs
zig/: PLAN.md  build.zig
zig/src/: ccc.zig  config.zig  help.zig  json_output.zig  parser.zig  prompt_spec.zig  runner.zig
zig/tests/: config_test.zig  help_test.zig  parser_test.zig  runner_test.zig
(+2216 files in other folders)
