[package]
name = "call-coding-clis"
version = "0.1.2"
edition = "2024"
license = "Unlicense"
description = "Minimal subprocess wrappers for coding CLIs"
repository = "https://github.com/clankercode/ccc"

[lib]
name = "call_coding_clis"
path = "rust/src/lib.rs"

[[bin]]
name = "ccc"
path = "rust/src/bin/ccc.rs"

[dependencies]
serde_json = "1"
