cabal-version: 3.0
name:          call-coding-clis
version:       0.1.0.0
build-type:    Simple

library
  exposed-modules:
    CallCodingClis.Types
    CallCodingClis.Runner
    CallCodingClis.PromptSpec
  build-depends:
    base >= 4.18 && < 5,
    process >= 1.6
  hs-source-dirs: src
  default-language: Haskell2010

executable ccc
  main-is: Main.hs
  build-depends:
    base >= 4.18 && < 5,
    process >= 1.6,
    call-coding-clis
  hs-source-dirs: app
  default-language: Haskell2010

test-suite call-coding-clis-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  build-depends:
    base >= 4.18 && < 5,
    process >= 1.6,
    call-coding-clis
  hs-source-dirs: test
  default-language: Haskell2010
