cabal-version: 3.0
name:          call-coding-clis
version:       0.1.0.0
build-type:    Simple

library
  exposed-modules:
    CallCodingClis.Types
    CallCodingClis.Runner
    CallCodingClis.PromptSpec
    CallCodingClis.Parser
    CallCodingClis.Config
    CallCodingClis.JsonOutput
    CallCodingClis.Help
  build-depends:
    base >= 4.18 && < 5,
    process >= 1.6,
    containers >= 0.6,
    aeson >= 2.0,
    scientific >= 0.3,
    text >= 1.2,
    bytestring >= 0.10,
    directory >= 1.3,
    filepath >= 1.4,
    unordered-containers >= 0.2
  hs-source-dirs: src
  default-language: Haskell2010

executable ccc
  main-is: Main.hs
  build-depends:
    base >= 4.18 && < 5,
    process >= 1.6,
    containers >= 0.6,
    call-coding-clis
  hs-source-dirs: app
  default-language: Haskell2010

test-suite call-coding-clis-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
    ParserSpec
    JsonOutputSpec
  build-depends:
    base >= 4.18 && < 5,
    process >= 1.6,
    containers >= 0.6,
    aeson >= 2.0,
    text >= 1.2,
    bytestring >= 0.10,
    hspec >= 2.10,
    call-coding-clis
  hs-source-dirs: test
  default-language: Haskell2010
