[package]
name = "ccc"
version = "0.1.0"
edition = "2021"
build = "build.rs"
description = "Call coding CLIs (opencode, claude, codex, kimi, etc.) from Rust programs"
license = "Unlicense"
repository = "https://github.com/xertrov/call-coding-clis"
keywords = ["cli", "opencode", "claude", "codex", "coding-agent"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ccc"
path = "src/bin/ccc.rs"

[lib]
name = "call_coding_clis"
path = "src/lib.rs"

[dependencies]
serde_json = "1"
