[package]
name = "ccc"
version = "0.2.0"
edition = "2021"
build = "build.rs"
description = "Unified Rust library and CLI for invoking coding-agent CLIs with shared parsing, planning, and transcript utilities"
license = "Unlicense"
repository = "https://github.com/clankercode/ccc"
documentation = "https://docs.rs/ccc"
readme = "README.md"
keywords = ["cli", "codex", "claude", "opencode", "automation"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ccc"
path = "src/bin/ccc.rs"

[lib]
name = "call_coding_clis"
path = "src/lib.rs"

[dependencies]
serde_json = "1"

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
